remove: 静的ファイル取得ルートを削除
